# gi-ui

./: Cargo.toml
benches/: resize.rs
examples/: canvas.rs  circle_png.rs  image_png.rs  layout_rects_png.rs  overlay_png.rs  rect_png.rs  scroll.rs  text8x8.rs  text_png.rs  titlebar.rs  ttf_text.rs
gi-derive/: Cargo.toml
gi-derive/src/: lib.rs
src/: alignment.rs  canvas.rs  draw.rs  helpers.rs  lib.rs  margin.rs  parent.rs  position.rs  rect.rs  side.rs  size.rs  tests.rs
src/components/: circle.rs  image.rs  margin.rs  mod.rs  rectangle.rs  scrollview.rs  text.rs  text8x8.rs  touchable.rs  ttf_text.rs  widget.rs
src/components/layout/: linear.rs  mod.rs  overlay.rs
src/tests/: general.rs  layout.rs  linear_layout.rs  mod.rs  overlay_layout.rs
static/: test_image.tga
