[package]
name = "zeraus"
version = "0.1.0"
edition = "2021"

[features]
default = ["text", "png"]
no_std = ["dep:nostd"]
text = ["dep:fontdue"]
png = ["dep:png"]

[dependencies]
fontdue = { version = "0.9.2", optional = true }
nostd = { version = "0.1.3", optional = true }
tinytga = "0.5.0"
embedded-graphics = "0.8.1"
png = { version = "0.17.16", optional = true }