[package]
name = "gi-ui"
version = "0.1.0"
edition = "2021"

[features]
default = ["std", "ttf_text", "png", "text8x8"]
std = []
ttf_text = ["dep:fontdue"]
text8x8 = ["dep:font8x8"]
png = ["dep:png"]

[dependencies]
fontdue = { version = "0.9.2", optional = true }
tinytga = "0.5.0"
embedded-graphics = "0.8.1"
png = { version = "0.17.16", optional = true }
gi-derive = { path = "./gi-derive" }
font8x8 = { version = "0.3.1", default-features=false, features=["unicode"], optional = true }

[workspace]
members = ["gi-derive"]


[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "resize"
harness = false